@@ -3,6 +3,6 @@ AUX jain-sip-1.2_p20070609-build.xml.patch 570 RMD160 55f171335b57ff8d0ccc383b8f
 DIST jain-sip-1.2_p20070410.tar.bz2 2168527 RMD160 c087e72eb43b9c63b3265aef72618e3a1cf63ddd SHA1 e8e9df703a1c45774dc7cdaa0f17f9067ec6e13b SHA256 fbc5909c15153231083877fbd7db93766ac8a5318b394b1af41a04d4bfe3ea7a
 DIST jain-sip-1.2_p20070609.tar.bz2 1550078 RMD160 8ea5933fe4c68f3d518b0a620b1b249710ff742b SHA1 1a3c87cb655241ea32280b7e5dda6e6fea5add60 SHA256 9fa9ab883106909f50eb0df07ad10fb7ad195c12b08d33e0b106dd0893b992d3
 EBUILD jain-sip-1.2_p20070410.ebuild 1483 RMD160 c990969f0f1067af7ef277e9c3c36bdd34ba3b6c SHA1 5b79d9626ac20496d926928c0edb66f7e2f4e00f SHA256 75fb8849c636539767571455b6d12634f5c995ba718eb2a8f7a57d7468aa12ae
-EBUILD jain-sip-1.2_p20070609.ebuild 1505 RMD160 733a26cca14131ff6c11fd8d582e3037cfdf642d SHA1 42c8d8f11c11e1f7bf2e4b66cd4321f0da06298b SHA256 31546ff125a37a3d0d4d37cb8f930d310c7a90671c8d321978c2fe49c450d864
-MISC ChangeLog 434 RMD160 c49b27c692470b08bf88f87979b364bdf0ae9bee SHA1 ea7f5c12143892cca04148de155584417368376f SHA256 26c6f4aed07f2ce6819845c413ab350c6707a5c196d1f1ec8e39e2f1eb5911b6
+EBUILD jain-sip-1.2_p20070609.ebuild 1620 RMD160 f7fd55ebf0abf69ce7b328757a02329c75679c1d SHA1 ec5860850413aed697fe86defc20abfc987d7ecc SHA256 1b7fc002d1c1cf2cb4586d6e76c158159bc33366db2ea690e4df4043125d41b8
+MISC ChangeLog 579 RMD160 84657ddefa7c2d9b21e1c233c4292b2792e08da4 SHA1 518e65f395342efa60f9710ad936a7901299e368 SHA256 3ebce631db10801789f53bb5b178bed2589a9c8a1527dd365340c3002be84ded
 MISC metadata.xml 217 RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 SHA1 9661e29f710f8b88d1ebad0d7cfa2716ae869b51 SHA256 00a5772b0da0819b665dba21d321e4e2393c818907d38678d179cafd5036c7f2
