@@ -3,6 +3,10 @@
 # $Header: $
 
   14 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
+  jain-sip-1.2_p20070609.ebuild:
+  Fixed installation of javadoc when 'test' USE flag is on
+
+  14 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
   +jain-sip-1.2_p20070609.ebuild,
   +files/jain-sip-1.2_p20070609-build.xml.patch:
   Version bump
